fixed z-index of the loader animation

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@ html {
     opacity: 1;
   }
   to {
-    z-index: 0;
+    z-index: -100;
     opacity: 0;
   }
 }
